# zot_haskell

./: .gitignore  LICENSE  LambdaToSKI.hs  Parse.hs  README  README.md  SKI.hs  addEcho.hs  addEcho.sh  flipPrint.ski  flipPrint.zot  id.lambda  lambdaToSKI.sh  memo  myReverse.lambda  rev.lambda  rev.lambda.bak  rev.ski  rev.ski.lambda  reverse.lambda  runLambda.sh  skiToLambda.hs  skiToLambda.sh  skiToZot.hs  skiToZot.sh  stack.yaml  testSKI.hs  zot.cabal  zot.hs  zot.scm  zot.sh  zotIO.hs  zotToSKI.hs  zotToSKI.sh
examples/: flipPrint.lambda  print3.lambda
memos/: memo  reverse.lambda
src/: AddEcho.hs  LambdaToSKI.hs  LambdaToSki.hs  Parse.hs  ReadLambda.hs  SKI.hs  SkiToLambda.hs  SkiToZot.hs  Zot.hs  ZotToSKI.hs  ZotToSki.hs  addEcho.hs  lambdaToSKI.hs  skiToLambda.hs  skiToZot.hs  zot.hs  zotToSKI.hs
test/: check1.sh  check2.sh  test.lambda
tools/: bitsToString.hs  getBinary.hs  putModTree.hs
